--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,12 @@ management.info.env.enabled=true
 info.app.name = My Super Cool App
 info.app.description= A crazy fun app!
 info.app.version= 0.0.1
+
+
+
+coach.name = Mickey Mouse
+team.name = The Mouse Club
+
+
+server.port=8080
+server.servlet.context-path=/mycoolapp
